@@ -9,6 +9,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 
 ### Fixed
 - Fix message passing and popup size for Chrome
+- Persist settings in local storage
 
 ## [2.1.0] - 2023-10-28
 
